nogga the quacker fix overflow hidden

--- a/tommy-client/src/app/chat/chat.component.css
+++ b/tommy-client/src/app/chat/chat.component.css
@@ -8,9 +8,9 @@ iframe{
   border: none;
 }
 #cloack {
-  /* position: absolute; */
-  right: 200px;
-  bottom: 200px;
+  position: fixed;
+  right: 100px;
+  bottom: 100px;
 }
 .visible {
   visibility: visible;
@@ -18,6 +18,7 @@ iframe{
   transition: opacity 0.5s linear;
 }
 .hidden {
+  display: none;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s 0.5s, opacity 0.5s linear;
